Fixing white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ header {
 }
 
 .homepage-container {
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .homepage-explore-kids {
